--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
         <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
           <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
         </md-button>
-        <h1>Ekonomicon</h1>
+        <h1>Eko</h1>
       </div>
     </md-toolbar>
     <div layout="row" flex ng-cloak>
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
           <md-button class="md-primary" ng-click="doNav('overview')">Översikt</md-button>
-          <md-button class="md-primary" ng-click="doNav('graph')">Graf</md-button>
+          <!--<md-button class="md-primary" ng-click="doNav('graph')">Graf</md-button>-->
           <md-button class="md-primary" ng-click="doNav('details')">Lista månad</md-button>
           <md-button class="md-primary" ng-click="doNav('addcost')">Lägg in kostnad</md-button>
-          <md-button class="md-primary" ng-click="doNav('addmoney')">Lägg in pengar</md-button>
+          <md-button class="md-primary" ng-click="doNav('addsalary')">Lägg in pengar</md-button>
+          <md-divider></md-divider>
+          <md-button class="md-primary" ng-click="doNav('settings')">Inställningar</md-button>
         </md-sidenav>
         <div flex>
           <ng-include src="nav"/>
@@ -34,6 +36,7 @@
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="bower_components/angular-material/angular-material.min.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.min.js"></script>
     <script src="bower_components/angular-google-chart/ng-google-chart.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
     <script src="bower_components/angular-moment/angular-moment.min.js"></script>
