--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html lang="en" ng-app="StarterApp">
   <head>
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body layout="column" ng-cloak="" ng-controller="AppCtrl">
+  <body layout="column" ng-cloak ng-controller="AppCtrl">
     <md-toolbar layout="row">
       <div class="md-toolbar-tools" ng-cloak>
         <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
@@ -15,7 +16,7 @@
         <h1>Eko</h1>
       </div>
     </md-toolbar>
-    <div layout="row" flex ng-cloak>
+    <div layout="row" flex>
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
           <md-button class="md-primary" ng-click="doNav('overview')">Översikt</md-button>
           <!--<md-button class="md-primary" ng-click="doNav('graph')">Graf</md-button>-->
