--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body layout="column" ng-cloak ng-controller="AppCtrl">
-    <md-toolbar layout="row">
-      <div class="md-toolbar-tools" ng-cloak>
+  <body ng-controller="AppCtrl">
+    <md-toolbar layout="row" layout-align="end center" flex>
+      <div class="md-toolbar-tools">
         <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
           <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
         </md-button>
-        <h1>Eko</h1>
+        <h1 ng-cloak>Eko</h1>  
       </div>
+      <md-button ng-click="fetchData()" aria-label="Refresh"><ng-md-icon icon="refresh" style="fill: white" size="24"></ng-md-icon></md-button>      
     </md-toolbar>
-    <div layout="row" flex>
+    <div ng-cloak layout="row" flex>
         <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
           <md-button class="md-primary" ng-click="doNav('overview')">Översikt</md-button>
-          <!--<md-button class="md-primary" ng-click="doNav('graph')">Graf</md-button>-->
+          <md-button class="md-primary" ng-click="doNav('graph')">Jämnför</md-button>
           <md-button class="md-primary" ng-click="doNav('details')">Lista kostnader</md-button>
           <md-button class="md-primary" ng-click="doNav('addcost')">Lägg till kostnad</md-button>
           <md-button class="md-primary" ng-click="doNav('addsalary')">Lägg till inkomst</md-button>
