--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body layout="column" ng-controller="AppCtrl">
+  <body layout="column" ng-controller="AppCtrl" ng-cloak>
     <md-toolbar layout="row">      
       <div class="md-toolbar-tools">
         <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
